--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://73ca281b-352c-46a5-a5a2-9503ee7b1c5a.preview.emergentagent.com
 WDS_SOCKET_PORT=443
